package gabriel.protocol.server.game;

enum MSG_TYPE
{
    DEFAULT_MSG_TYPE = 1;
}
